# qwiet

./: .clang-format  .cmake-format.yaml  .gitignore  .mypy.ini  .prettierrc.yaml  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
cmake/modules/: FindCMock.cmake  FindLibevdev.cmake  FindUnity.cmake  unity.cmake  unity_cfg.yaml  unity_config.h
diotde/: README.md
docs/: llm-project.md
include/curriculo/platform/: common.h  event.h  input.h  net.h  time.h
include/curriculo/platform/testing/: diode.h
include/qwiet/platform/: net.h  time.h  timer.h
include/qwiet/platform/testing/diode/: net_poll.h
platform/linux/: CMakeLists.txt
platform/linux/src/: event.c  input.c  net.c  time.c  timer.c
platform/testing/diode/: CMakeLists.txt
platform/testing/diode/src/: net_poll.c  poll.c
platform/testing/linux/: generic_teardown.c
tests/diode/: CMakeLists.txt
tests/diode/src/: stubs.h  test.c  test_poll.c
tests/timer/: CMakeLists.txt
tests/timer/src/: test.c
tools/unity/: func_name_list.py  header_prepare.py
